feat: script updated

--- a/server.yml
+++ b/server.yml
@@ -1,5 +1,5 @@
 Description: >
-  Fabio Rego / Udacity
+  Srikanth Doddi / Udacity
 Parameters:
   EnvironmentName:
     Description: An environment name that will be prefixed to resource names
